--- a/SouthernsChat/locales/en.json
+++ b/SouthernsChat/locales/en.json
@@ -66,7 +66,7 @@
 	"Room": "Room",
 	"Post in room?": "Post in room?",
 	"Authentication tokens": "Authentication tokens",
-	"Auth tokens are used to access the Let's Chat API.": "Auth tokens are used to access the Let's Chat API.",
+	"Auth tokens are used to access the Southern's Chat API.": "Auth tokens are used to access the Southern's Chat API.",
 	"Generate token": "Generate token",
 	"Revoke token": "Revoke token",
 	"Your generated token is below. It will not be shown again.": "Your generated token is below. It will not be shown again.",
