--- a/SouthernsChat/locales/de.json
+++ b/SouthernsChat/locales/de.json
@@ -66,7 +66,7 @@
 	"Room": "Raum",
 	"Post in room?": "Als Nachricht anzeigen?",
 	"Authentication tokens": "Authentifizierungs-Tokens",
-	"Auth tokens are used to access the Let's Chat API.": "Authentifizierungs-Tokens werden für Zugriffe auf die Let's Chat API benötigt.",
+	"Auth tokens are used to access the Southern's Chat API.": "Authentifizierungs-Tokens werden für Zugriffe auf die Southern's Chat API benötigt.",
 	"Generate token": "Generiere Token",
 	"Revoke token": "Token löschen",
 	"Your generated token is below. It will not be shown again.": "Ihr generierter Token steht unten. Er wird nicht nocheinmal angezeigt.",
