--- a/SouthernsChat/locales/fi.json
+++ b/SouthernsChat/locales/fi.json
@@ -66,7 +66,7 @@
 	"Room": "Huone",
 	"Post in room?": "Lähetä huoneeseen?",
 	"Authentication tokens": "Todennustunnisteet",
-	"Auth tokens are used to access the Let's Chat API.": "Todennustunnisteita käytetään Let's Chatin APIssa.",
+	"Auth tokens are used to access the Southern's Chat API.": "Todennustunnisteita käytetään Southern's Chatin APIssa.",
 	"Generate token": "Luo tunniste",
 	"Revoke token": "Kumoa tunniste",
 	"Your generated token is below. It will not be shown again.": "Luomasti tunniste näkyy alapuolella. Sitä ei näytetä uudestaan.",
