--- a/SouthernsChat/locales/fr.json
+++ b/SouthernsChat/locales/fr.json
@@ -66,7 +66,7 @@
 	"Room": "Salon",
 	"Post in room?": "Publier dans le salon ?",
 	"Authentication tokens": "Jetons d'authentification",
-	"Auth tokens are used to access the Let's Chat API.": "Les jetons d'authentifications sont utilisés pour accéder à l'API de Let's Chat.",
+	"Auth tokens are used to access the Southern's Chat API.": "Les jetons d'authentifications sont utilisés pour accéder à l'API de Southern's Chat.",
 	"Generate token": "Générer un jeton",
 	"Revoke token": "Révoquer un jeton",
 	"Your generated token is below. It will not be shown again.": "Votre nouveau jeton est visible ci-dessous. Il ne sera plus accessible à la fermeture de cette fenêtre.",
