--- a/SouthernsChat/locales/ja.json
+++ b/SouthernsChat/locales/ja.json
@@ -66,7 +66,7 @@
 	"Room": "ルーム",
 	"Post in room?": "ルームに投稿しますか？",
 	"Authentication tokens": "認証トークン",
-	"Auth tokens are used to access the Let's Chat API.": "認証トークンは Let's Chat API へアクセスするために使用されています。",
+	"Auth tokens are used to access the Southern's Chat API.": "認証トークンは Southern's Chat API へアクセスするために使用されています。",
 	"Generate token": "認証トークン生成",
 	"Revoke token": "認証トークン無効化",
 	"Your generated token is below. It will not be shown again.": "生成したトークンは以下の通りです。再表示されないので注意してください。",
