--- a/SouthernsChat/locales/ru.json
+++ b/SouthernsChat/locales/ru.json
@@ -66,7 +66,7 @@
 	"Room": "Комната",
 	"Post in room?": "Разместить в комнате?",
 	"Authentication tokens": "Токены аутентификации",
-	"Auth tokens are used to access the Let's Chat API.": "Токены аутентификации используются для предоставления доступа к API Let's Chat.",
+	"Auth tokens are used to access the Southern's Chat API.": "Токены аутентификации используются для предоставления доступа к API Southern's Chat.",
 	"Generate token": "Сгенерировать токен",
 	"Revoke token": "Отозвать токен",
 	"Your generated token is below. It will not be shown again.": "Ваш сгенерированный токен. Он более не будет показан.",
