--- a/SouthernsChat/locales/tr.json
+++ b/SouthernsChat/locales/tr.json
@@ -66,7 +66,7 @@
 	"Room": "Oda",
 	"Post in room?": "Odada mesaj var mı?",
 	"Authentication tokens": "Doğrulama Anahtarları",
-	"Auth tokens are used to access the Let's Chat API.": "Doğrulama anahtarları, Let's Chat API'sine erişmek için kullanılmaktadır.",
+	"Auth tokens are used to access the Southern's Chat API.": "Doğrulama anahtarları, Southern's Chat API'sine erişmek için kullanılmaktadır.",
 	"Generate token": "Anahtar oluştur",
 	"Revoke token": "Anahtarı iptal et",
 	"Your generated token is below. It will not be shown again.": "Oluşturulan anahtarınız aşağıdadır. Bu anahtar bir daha gösterilmeyecek.",
