--- a/SouthernsChat/locales/zh-TW.json
+++ b/SouthernsChat/locales/zh-TW.json
@@ -66,7 +66,7 @@
 	"Room": "聊天室",
 	"Post in room?": "發送到此聊天室?",
 	"Authentication tokens": "認證權杖",
-	"Auth tokens are used to access the Let's Chat API.": "Let's Chat API需靠認證權杖驗證",
+	"Auth tokens are used to access the Southern's Chat API.": "Southern's Chat API需靠認證權杖驗證",
 	"Generate token": "生成權杖",
 	"Revoke token": "撤銷權杖",
 	"Your generated token is below. It will not be shown again.": "您的認證權杖如下，之後將不再顯示。",
